src/containers/sermon/embed.module.scss
@import '../../styles/common';

.base {
	// FUTURE: redefine these by content type
	--recordingAccent: #{$ts-red};
	--recordingBackground: #{$ts-white};
	--recordingHatBackground: #{$ts-cream};
	--recordingHatHover: #{$ts-darkened-cream};
	--recordingTextColor: #{$ts-dark};
	--recordingTextSecondaryColor: #{$ts-midTone};
	--recordingWavesColor: #{$ts-lightTone};
	border: 1px solid $ts-cream;

	min-height: 100vh;
	border-radius: 16px;
	overflow: hidden;

	background: var(--recordingBackground);
	color: var(--recordingTextColor);
}

.hat {
	display: block;
	padding: 16px;
	background-color: var(--recordingHatBackground);
	text-decoration: none;
	> span {
		display: inline-block;
		margin-left: 4px;
	}
	&,
	&:hover {
		color: var(--recordingTextColor);
	}
	&:hover {
		text-decoration: none;
		background: var(--recordingHatHover);
	}
}

.content {
	display: flex;
	flex-direction: column;
	padding: 16px 16px 8px;
}

.part {
	margin-bottom: 4px;
	color: var(--recordingAccent);
	font-weight: 600;
}

.titleRow {
	display: flex;
	align-items: center;
}

.text {
	width: 0;
	flex: 1 1 auto;
}

.title {
	padding-right: 10vw;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.titleLink {
	&,
	&:hover {
		text-decoration: none;
		color: $ts-dark;
	}
}

.logo {
	flex: 0 0 auto;
}

.speakers {
	padding-left: 0;
	margin-top: 0;
	margin-bottom: 0;
	padding-bottom: 0;
	li {
		display: block;
		margin-right: 8px;
		margin-bottom: 8px;
		@media (min-width: $breakpoint-md) {
			display: inline-block;
		}
		@media (min-width: $breakpoint-lg) {
			margin-right: 16px;
			margin-bottom: 16px;
		}
	}
}

